statum-macros/tests/ui/invalid_transition_unknown_machine.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `does_not_exist`
  --> tests/ui/invalid_transition_unknown_machine.rs:26:1
   |
26 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `does_not_exist`
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find macro `__statum_resolve_does_not_exist_transition_target` in this scope
  --> tests/ui/invalid_transition_unknown_machine.rs:26:1
   |
21 | #[machine]
   | ---------- similarly named macro `__statum_resolve_machine_transition_target` defined here
...
26 | #[transition]
   | ^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a macro with a similar name exists
   |
26 - #[transition]
26 + __statum_resolve_machine_transition_target
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `does_not_exist`
  --> tests/ui/invalid_transition_unknown_machine.rs:26:1
   |
26 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `does_not_exist`
   |
   = help: if you wanted to use a crate named `does_not_exist`, use `cargo add does_not_exist` to add it to your `Cargo.toml`
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this enum
   |
 3 + use crate::machine::StateId;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `does_not_exist`
  --> tests/ui/invalid_transition_unknown_machine.rs:26:1
   |
26 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `does_not_exist`
   |
   = help: if you wanted to use a crate named `does_not_exist`, use `cargo add does_not_exist` to add it to your `Cargo.toml`
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this struct
   |
 3 + use crate::machine::TransitionId;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `does_not_exist`
  --> tests/ui/invalid_transition_unknown_machine.rs:26:1
   |
26 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `does_not_exist`
   |
   = help: if you wanted to use a crate named `does_not_exist`, use `cargo add does_not_exist` to add it to your `Cargo.toml`
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this module
   |
 3 + use crate::machine::via;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `does_not_exist`
  --> tests/ui/invalid_transition_unknown_machine.rs:26:1
   |
26 | #[transition]
   | ^^^^^^^^^^^^^ use of unresolved module or unlinked crate `does_not_exist`
   |
   = help: if you wanted to use a crate named `does_not_exist`, use `cargo add does_not_exist` to add it to your `Cargo.toml`
   = note: this error originates in the attribute macro `transition` (in Nightly builds, run with -Z macro-backtrace for more info)
